# parallel-ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arena_allocator.h  main.cpp
include/: camera.h  ray.h  simd_math.h
src/: main.cpp
